--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
-    "marked": "^0.7.0",
+    "js-cookie": "^2.2.1",
+    "tui-editor": "^1.4.7",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
