--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
-    "tui-editor": "^1.4.7",
+    "marked": "^0.7.0",
+    "mavon-editor": "^2.7.7",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
