--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
-    "marked": "^0.7.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-highlight": "^0.2.0",
     "mavon-editor": "^2.7.7",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
