--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@saeris/vue-spinners": "^1.0.8",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
     "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.5",
     "markdown-it-highlight": "^0.2.0",
+    "markdown-it-toc-done-right": "^4.1.0",
     "mavon-editor": "^2.7.7",
     "vue": "^2.6.10",
+    "vue-ins-progress-bar": "^1.3.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
   },
