--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,11 @@
 user              nginx;
-worker_processes  1;
+worker_processes  auto;
 error_log         /var/log/nginx/error.log warn;
 pid               /var/run/nginx.pid;
 events {
     worker_connections  1024;
+    multi_access        on;
+    use epoll;
 }
 http {
     include        /etc/nginx/mime.types;
@@ -11,9 +13,17 @@ http {
     log_format     main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log         /var/log/nginx/access.log  main;
-    sendfile           on;
-    keepalive_timeout  65;
+    access_log           /var/log/nginx/access.log  main;
+    sendfile             on;
+    tcp_nopush           on;
+    tcp_nodelay          on;
+    keepalive_timeout    65;
+    types_hash_max_size  2048;
+
+    upstream api {
+        server bloger-backend:9000;
+        keepalive 8;
+    }
 
     server {
         listen       80;
@@ -31,8 +41,8 @@ http {
             proxy_set_header  X-NginX-Proxy      true;
             proxy_set_header  X-Forwarded-Proto  $scheme;
 
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://bloger-backend:9000;
+            rewrite     ^/api/(.*)$ /$1 break;
+            proxy_pass  http://api;
         }
 
         error_page   500 502 503 504  /50x.html;
