--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
+    "js-sha256": "^0.9.0",
     "markdown-it": "^11.0.0",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-highlight": "^0.2.0",
