--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bloger-ui",
-  "version": "0.1.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,11 +10,11 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
+    "highlight.js": "^11.2.0",
     "js-cookie": "^2.2.1",
     "js-sha256": "^0.9.0",
     "markdown-it": "^11.0.0",
     "markdown-it-anchor": "^5.3.0",
-    "markdown-it-highlight": "^0.2.0",
     "markdown-it-toc-done-right": "^4.1.0",
     "mavon-editor": "^2.7.7",
     "vue": "^2.6.11",
